<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <include layout="@layout/view_progress" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fd_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/height"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mass"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_hair_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hair_color"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_skin_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/skin_color"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_eye_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eye_color"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_birth_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/birth_year"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fd_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/black" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
